tests/error/enum_declared.gw
#! [contains] already been defined
var int i;
enum i
{
  test
}
